// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwfCombinedEditor component tests snapshot of the emedded editor json 1`] = `
<div>
  <article
    class="pf-c-card"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
    style="height: 600px; width: 600px;"
  >
    <div
      class="pf-c-card__header"
    >
      <h3
        class="pf-c-title pf-m-xl"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Serverless Workflow Diagram
      </h3>
    </div>
    <div
      class="pf-c-card__body"
    >
      <iframe
        data-envelope-channel="ONLINE_MULTI_FILE"
        data-testid="kogito-iframe"
        id="kogito-iframe"
        src="resources/serverless-workflow-combined-editor-envelope.html"
        style="display: flex; flex: 1; flex-direction: column; width: 100%; height: 100%; margin: 0px; padding: 0px; overflow: hidden;"
        title="Kogito editor"
      />
    </div>
  </article>
</div>
`;

exports[`SwfCombinedEditor component tests snapshot of the emedded editor yaml 1`] = `
<div>
  <article
    class="pf-c-card"
    data-ouia-component-id="OUIA-Generated-Card-2"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
    style="height: 600px; width: 600px;"
  >
    <div
      class="pf-c-card__header"
    >
      <h3
        class="pf-c-title pf-m-xl"
        data-ouia-component-id="OUIA-Generated-Title-2"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Serverless Workflow Diagram
      </h3>
    </div>
    <div
      class="pf-c-card__body"
    >
      <iframe
        data-envelope-channel="ONLINE_MULTI_FILE"
        data-testid="kogito-iframe"
        id="kogito-iframe"
        src="resources/serverless-workflow-combined-editor-envelope.html"
        style="display: flex; flex: 1; flex-direction: column; width: 100%; height: 100%; margin: 0px; padding: 0px; overflow: hidden;"
        title="Kogito editor"
      />
    </div>
  </article>
</div>
`;
